RESOLVED FIXED256580
WebSocket's binaryType setter should not throw
https://bugs.webkit.org/show_bug.cgi?id=256580
Summary WebSocket's binaryType setter should not throw
Anne van Kesteren
Reported 2023-05-10 01:52:18 PDT
Might make sense to adopt enum BinaryType { "blob", "arraybuffer" }; when making this change.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-05-10 23:43:59 PDT
Anne van Kesteren
Comment 2 2023-05-10 23:47:38 PDT
EWS
Comment 3 2023-05-11 07:13:07 PDT
Committed 263963@main (6e89039cfb2d): <https://commits.webkit.org/263963@main> Reviewed commits have been landed. Closing PR #13742 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.