WebSocket's binaryType setter should not throw https://bugs.webkit.org/show_bug.cgi?id=256580 rdar://109192086

Reviewed by Antti Koivisto.

Align WebSocket.idl with the WebSockets Standard. In particular:

- binaryType is now an enum
- protocol and extensions are no longer nullable (I don't think they ever returned null)

* LayoutTests/TestExpectations:
* LayoutTests/http/tests/websocket/tests/hybi/binary-type-expected.txt:
* LayoutTests/http/tests/websocket/tests/hybi/binary-type.html:
* LayoutTests/imported/w3c/web-platform-tests/websockets/binaryType-wrong-value.any.worker_wss-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/websockets/binaryType-wrong-value.any_wss-expected.txt:
* Source/WebCore/Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::setBinaryType):
(WebCore::WebSocket::didReceiveBinaryData):
(WebCore::WebSocket::binaryType const): Deleted.
* Source/WebCore/Modules/websockets/WebSocket.h:
(WebCore::WebSocket::binaryType const):
* Source/WebCore/Modules/websockets/WebSocket.idl:
* Source/WebCore/xml/XMLHttpRequest.h:
(WebCore::XMLHttpRequest::responseType const): Deleted.
(WebCore::XMLHttpRequest::readyState const): Deleted.

Inline these into their declaration as well, matching WebSocket's binaryType(), per a review nit.

Canonical link: https://commits.webkit.org/263963@main